# SelSQL

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: .travis.yml  tests.yml
Client/: CMakeLists.txt  Client.cpp  Client.h  Exception.h  main.cpp
Client/ClientUtils/: ClientUtilsLin.cpp  ClientUtilsWin.cpp
Client/ClientUtils/Lin/: ClientUtilsLin.cpp  ClientUtilsLin.h
Client/ClientUtils/Win/: ClientUtilsWin.cpp  ClientUtilsWin.h
Client/Linux/: LinuxClient.cpp  LinuxClient.h
Client/Win/: WinClient.cpp  WinClient.h
Server/: CMakeLists.txt  Exception.h  MainServer.cpp  MainServer.h  Server.cpp  Server.h  main.cpp
Server/Linux/: LinuxServer.cpp  LinuxServer.h
Server/ServerUtils/: ServerUtils.h  ServerUtilsLin.cpp  ServerUtilsWin.cpp
Server/ServerUtils/Lin/: ServerUtilsLin.cpp  ServerUtilsLin.h
Server/ServerUtils/Win/: ServerUtilsWin.cpp  ServerUtilsWin.h
Server/Win/: WinServer.cpp  WinServer.h
Tests/: CMakeLists.txt  TestClass.cpp  main.cpp  main_test.cpp
Tests/Headers/: TestUtils.h
Tests/RQG/: Generator.cpp  Generator.h
Tests/Tests_CRUD/: CMakeLists.txt  TestClass.cpp
Tests/Tests_Error/: CMakeLists.txt  TestClass.cpp
Tests/Tests_JUI/: CMakeLists.txt  TestClass.cpp
Tests/Tests_Stress/: CMakeLists.txt  TestClass.cpp
Tests/Tests_Thread/: CMakeLists.txt  TestClass.cpp
lib/googletest-master/: CMakeLists.txt
lib/googletest-master/googletest/include/gtest/internal/: gtest-internal.h
src/: CMakeLists.txt  main.cpp
src/Engine/: CachedBlocks.cpp  Cursor.cpp  DataManager.cpp  EngineUtils.cpp  FileManager.cpp  Index.cpp  MainEngine.cpp  TransactManager.cpp
src/Engine/Headers/: APIEngine.h  CachedBlocks.h  Cursor.h  DataManager.h  EngineUtils.h  FileManager.h  Index.h  MainEngine.h  TransactManager.h
src/Logic/: MainLogic.cpp
src/Logic/Actions/: ActionCreate.cpp  ActionDelete.cpp  ActionDrop.cpp  ActionInsert.cpp  ActionSelect.cpp  ActionShowCreate.cpp  ActionUpdate.cpp  CreateAction.cpp  DeleteAction.cpp  DropAction.cpp  IndexCreateAction.cpp  InsertAction.cpp  SelectAction.cpp  ShowCreateAction.cpp  UpdateAction.cpp
src/Logic/Actions/Headers/: ActionCreate.h  ActionDelete.h  ActionDrop.h  ActionFactory.h  ActionInsert.h  ActionSelect.h  ActionShowCreate.h  ActionUpdate.h  BaseAction.h  CreateAction.h  DeleteAction.h  DropAction.h  IndexCreateAction.h  InsertAction.h  SelectAction.h  ShowCreateAction.h  UpdateAction.h
src/Logic/Headers/: APILogic.h  MainLogic.h
src/Parser/: ParserLogic.cpp  TreeVisitor.cpp  lexer.l  parser.y
src/Parser/Headers/: CreateVisitor.h  DeleteVisitor.h  DropVisitor.h  ExpressionOptimizerVisitor.h  ExpressionVisitor.h  IndexCreateVisitor.h  IndexExprVisitor.h  InsertVisitor.h  ParserLogic.h  SelectVisitor.h  ShowCreateVisitor.h  TreeVisitor.h  UpdateVisitor.h  Visitor.h
src/Parser/Nodes/: BaseNode.h  ColumnNode.h  ColumnsAndExprNode.h  ColumnsAndValuesNode.h  ConstraintNode.h  ConstraintsListNode.h  IdentificatorNode.h  RootNode.h  SystemTimeAllNode.h  SystemTimeNode.h  TableNode.h  UpdatesAndExprNode.h  VariableListNode.h  VariableNode.h  VariablesListNode.h
src/Parser/Nodes/ActionNodes/: BaseActionNode.h  CreateNode.h  DeleteNode.h  DropNode.h  IndexNode.h  InsertNode.h  SelectNode.h  ShowCreateNode.h  UpdateNode.h
src/Parser/Nodes/ExpressionsNodes/: AssignUpdateNode.h  BaseExprNode.h  ExprNode.h  IndentExprNode.h  IndentNode.h  UpdateExprNode.h  ValueExprNode.h
src/Parser/Nodes/ExpressionsNodes/ArithmeticNodes/: AddNode.h  ArithmeticNode.h  DivNode.h  MultNode.h  SubNode.h
src/Parser/Nodes/ExpressionsNodes/CompareNodes/: CmpNode.h  EqualsNode.h  LessEqNode.h  LessNode.h  MoreEqNode.h  MoreNode.h  NoEqualsNode.h
src/Parser/Nodes/ExpressionsNodes/LogicNodes/: AndLogicNode.h  NotLogicNode.h  OrLogicNode.h
src/Parser/Nodes/JoinNodes/: BaseJoinNode.h  FullJoinNode.h  IntersectJoinNode.h  JoinNode.h  LeftJoinNode.h  RightJoinNode.h  SourceJoinNode.h  UnionIntersectListNode.h  UnionIntersectNode.h  UnionJoinNode.h
src/Parser/Nodes/ValuesNodes/: BaseValueNode.h  CharValueNode.h  FloatValueNode.h  IntValueNode.h  NullValueNode.h
src/Tests/: Tests.cpp
src/Utils/: ActionsUtils.cpp  CommonUtils.cpp  Expression.cpp  ParserUtils.cpp
src/Utils/Headers/: ActionsUtils.h  CommonUtils.h  Constants.h  ErrorConstants.h  ParserUtils.h
src/Utils/Structures/: BigRequest.h  BigResponse.h  Error.h  Message.h
src/Utils/Structures/Data/: DDLdata.h  DMLdata.h  DQLdata.h  DataBlock.h  Expresion.h  Record.h  Table.h  Variable.h
